examples/50-ingress-with-dns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    dns.gardener.cloud/dnsnames: '*'
    # If you are delegating the DNS management to Gardener, uncomment the following line (see https://gardener.cloud/documentation/guides/administer_shoots/dns_names/)
    #dns.gardener.cloud/class: garden
    # If you are delegating the certificate management to Gardener, uncomment the following line (see https://gardener.cloud/documentation/guides/administer_shoots/x509_certificates/)
    #cert.gardener.cloud/purpose: managed
    #dns.gardener.cloud/ttl: "500"
    #dns.gardener.cloud/owner-id: second
    #dns.gardener.cloud/ip-stack: dual-stack     # AWS-route 53 only: enable both A and AAAA alias targets
    #dns.gardener.cloud/resolve-targets-to-addresses: "true"
    # To temporarily skip reconciliation of created entries
    #dns.gardener.cloud/ignore: "reconcile" # or "true"
    # To skip reconciliation and cleanup of DNS records on deletion
    #dns.gardener.cloud/ignore: "full"
  name: test-ingress
  namespace: default
spec:
  rules:
    - host: test.ingress.my-dns-domain.com
      http:
        paths:
          - backend:
              service:
                name: my-service
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - test.ingress.my-dns-domain.com
      secretName: my-cert-secret-name
